# SmolOS

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  build.sh  cmake_build.sh  cmake_configure.sh  compile_commands.json  drivers_conf.yaml  memory.x  openocd.cfg  openocd.gdb
.agent/rules/: AGENTS.md  my-review.md
.cargo/: config.toml
.zed/: debug.json  tasks.json
config/: drivers_conf.yaml
crates/display/: Cargo.toml
crates/display/src/: colors.rs  errors.rs  fonts.rs  frame_buffer.rs  lib.rs
crates/hal_interface/: Cargo.toml
crates/hal_interface/src/: bindings.rs  errors.rs  interface_read.rs  interface_write.rs  lib.rs  lock.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: boot.rs  console_output.rs  data.rs  devices.rs  errors_mgt.rs  ident.rs  lib.rs  scheduler.rs  syscall.rs  systick.rs  terminal.rs
crates/kernel/src/apps/: app_config.rs  app_ctrl.rs  mod.rs
crates/kernel/src/kernel_apps/: app_ctrl.rs  err_gen.rs  led_blink.rs  mod.rs  reboot.rs
crates/kernel/src/types/: errors.rs  time.rs
crates/kernel_apps/: Cargo.toml
crates/kernel_apps/src/: led_blink.rs  lib.rs  reboot.rs
crates/smolos/: Cargo.toml  build.rs
crates/smolos/src/: interrupts.rs  main.rs
drivers/: .mxproject  CMakeLists.txt  drivers.ioc
drivers/Interface/: lib_interface.c
drivers/Interface/Inc/: drivers_alloc.h  drivers_types.h  lib_interface.h
drivers/Interface/Src/: drivers_alloc.c  lib_interface.c
drivers/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
drivers/cmake/stm32cubemx/: CMakeLists.txt
hal_interface/src/: errors.rs  lib.rs  lock.rs
kernel/src/: boot.rs  devices.rs  lib.rs  scheduler.rs
kernel/src/types/: mod.rs
libs/display/src/: colors.rs  errors.rs  fonts.rs  frame_buffer.rs  lib.rs
libs/hal_interface/: Cargo.toml
libs/hal_interface/src/: async_block.rs  bindings.rs  errors.rs  interface_actions.rs  interface_read.rs  interface_write.rs  interfaces.rs  lib.rs  lock.rs
libs/kernel/: Cargo.toml
libs/kernel/src/: boot.rs  console_output.rs  data.rs  errors_mgt.rs  except.rs  ident.rs  lib.rs  scheduler.rs  syscall.rs  systick.rs  terminal.rs
libs/kernel/src/apps/: app_config.rs
libs/kernel/src/apps_manager/: app_config.rs  led_blink.rs  mod.rs  shell_cmd.rs
libs/kernel/src/kernel_apps/: led_blink.rs  mod.rs  reboot.rs
libs/kernel/src/terminal/: mod.rs  terminal_wrapper.rs
libs/kernel/src/types/: errors.rs  time.rs
smolos/: build.rs
src/: interface_init.rs  interrupts.rs  main.rs
tools/: c_file.template  gen_drivers_alloc.py  h_file.template  install_dependencies.sh
tools/gen_drivers_alloc/: gen_drivers_alloc.py
