[package]
authors = ["Nicolas SIMON <nicolas.simon6790@gmail.com>"]
name = "SmolOS"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = { version = "0.7.0" }
kernel = { path = "libs/kernel" }
hal_interface = { path = "libs/hal_interface" }
embassy-stm32 = { version = "0.4.0", features = ["stm32f769ni", "single-bank"] }

[[bin]]
name = "SmolOS"
test = false
doctest = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
