[package]
authors = ["Nicolas SIMON <nicolas.simon6790@gmail.com>"]
name = "SmolOS"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = { version = "0.7.0" }
kernel = { path = "libs/kernel" }
hal_interface = { path = "libs/hal_interface" }
heapless = "0.9.1"

[dependencies.stm32f7]
features = ["stm32f769", "rt"]
version = "0.16.0"

[[bin]]
name = "SmolOS"
test = false
doctest = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
