[workspace]
resolver = "3"
members = ["crates/smolos", "crates/kernel", "crates/hal_interface", "crates/display", "crates/kernel_apps"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
