[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
cortex-m-semihosting = "0.5.0"
cortex-m-rt = { version = "0.7.0" }
hal_interface = { path = "../hal_interface" }
display = { path = "../display" }
heapless = "0.9.1"
spin = "0.9.3"

[lib]
name = "kernel"
test = false
doctest = false
bench = false
