[package]
authors = ["Nicolas SIMON <nicolas.simon6790@gmail.com>"]
name = "smolos"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cortex-m-rt = { version = "0.7.0" }
kernel = { path = "../kernel" }
hal_interface = { path = "../hal_interface" }
heapless = "0.9.1"

[dependencies.stm32f7]
features = ["stm32f769", "rt"]
version = "0.16.0"

[[bin]]
name = "smolos"
test = false
doctest = false
bench = false
