[package]
name = "hal_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.4.0", features = ["stm32f769ni", "single-bank"] }
heapless = "0.9.1"

[lib]
name = "hal_interface"
test = false
doctest = false
bench = false
