[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-semihosting = "0.5.0"
cortex-m-rt = { version = "0.7.0" }
panic-semihosting = "0.6.0"
hal_interface = { path = "../hal_interface" }


[lib]
name = "kernel"
test = false
doctest = false
bench = false
